[tool.poetry]
name = "dao-dash"
version = "0.1.0"
description = ""
authors = ["Jessey White-Cinis <j@cin.is>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.1"
web3 = "^5.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
